--- a/web/templates/choices.html
+++ b/web/templates/choices.html
@@ -1,3 +1,5 @@
+{{define "choices"}}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../static/stylesheets/choices.css">
+    <link rel="stylesheet" href="css/choices.css">
     
     <title>What do you meme?</title>
 </head>
@@ -73,3 +75,5 @@
 
 </body>
 </html>
+
+{{end}}
