--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/stylesheets/landing.css">
-    <link rel="stylesheet" href="../static/stylesheets/choices.css">
-    <link rel="stylesheet" href="../static/stylesheets/gameScreen1.css">
-    <link rel="stylesheet" href="../static/stylesheets/settings.css">
-    <link rel="stylesheet" href="../static/stylesheets/top.css">
+    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/choices.css">
+    <link rel="stylesheet" href="css/gameScreen1.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/top.css">
     
     
     <title>What do you meme?</title>
